# vectors_medtech

./: .gitignore  IDN_by_UCN.py  create_agreement_amendment_json.py  create_clause_json.py  create_customer_json.py  create_metadata_json.py  create_payload_json.py  delete_points.py  extract_clause.py  extract_text_docling.py  extract_text_pypdf.py  ingest_contract.py  intent_identifier.py  make_table_from_md.py  payload.json  prompt.py  pyproject.toml  remove_tables.py  run_queries.py
configs/: config.ini
metadata/: Golden Record Lexora.xlsx  Golden Record Manual.xlsx  Ind_SHIPto_UCN.py  Invoke-SearchAndDownload-v9 1.ps1  active_records.xlsx  add_parent_shipto.py  add_record_no.py  compare_contracts.py  disect_related_recs.py  enum_contract_type.py  fix_mismatch.py  fix_refer_parent_document.py  generate_sqlite_db.py  golden_record_comparision.py  invoke_search_and_download.py  lexora_integration.py  lexora_metadata.xlsx  merge_contracts.py  metadata_class.py  metadata_preprocessor.py  normalize_column_values.py  python_TRIM_script.py  unique_list.py
