[project]
name = "graph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.40.61",
    "docling>=2.65.0",
    "matplotlib>=3.10.8",
    "network>=0.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pdfplumber>=0.11.8",
    "pymupdf>=1.26.7",
    "pyvis>=0.3.2",
    "tabulate>=0.9.0",
]
